--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,6 +39,7 @@ div.search{
     align-items: center;
     border: 1.1px solid #dfe1e5;
     border-radius: 24px 24px 24px 24px;
+    margin-top: 6px;
 }
 #search-icon{
     width: 20px;
@@ -48,10 +49,11 @@ div.search{
     margin-top: -5px;
     line-height: 24px;
     color: #9aa0a6;
+    font-size: 20px;
 }
 div.top{
     min-height: 92px;
-    max-height: 290px;
+    max-height: 350px;
     height: calc(100% - 560px);
     flex-shrink: 0;
     box-sizing: border-box;
@@ -75,17 +77,70 @@ a{
     color: black;
     text-decoration: none;
 }
+a:hover{
+    text-decoration: underline;
+}
 header{
     display: flex;
     flex-direction: row;
-    height: 50px;
+    height: 60px;
     width: 100%;
     align-items: center;
+    position: fixed;
 }
 a.left-header{
-    margin-left: 10px;
+    margin-left: 16px;
+    font-size: 14px;
+    color: rgb(29, 29, 29);
     
 }
 div.left{
-    margin-left: 5px;
+    margin-left: 10px;
+}
+div.right{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 10px;
+    font-size: 13px;
+}
+#account-icon{
+    font-size: 37px;
+    color:navy;
+}
+#apps-icon{
+    font-size: 23px;
+    margin-right: 10px;
+}
+div.right-text{
+margin-right: 10px;
+}
+a.right-header{
+    margin: 6px;
+}
+button.button{
+    margin: 12px;
+    margin-top: 28px;
+    background: white;
+    border-width: 1px;
+    border-color: transparent;
+    box-shadow: none;
+    padding: 10px;
+    font-family: "Liberation Sans";
+    font-size: 14px;
+}
+button.button:hover{
+    cursor: pointer;
+    border-style:solid;
+    border-width: 1px;
+    border-color: lightgrey;
+    padding: 10px;
+    border-radius: 4px 4px 4px 4px;
+}
+#buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
