--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,13 +5,14 @@ body{
     font-family: "Liberation Sans";
     color: black;
     font-size: 14px;
+    background: transparent;
 }
 div.main{
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    background-color: white;
+    background-color: transparent;
     align-items: center;
 }
 #search{
@@ -147,4 +148,18 @@ button.button:hover{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 45px;
+    background: #f2f2f2;
+    color: #70757a;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+a.bottom-left{
+    color: rgb(64, 64, 100);
 }
