--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,13 +153,36 @@ footer{
     position: fixed;
     bottom: 0px;
     width: 100%;
-    height: 45px;
+    height: 47px;
     background: #f2f2f2;
     color: #70757a;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 a.bottom-left{
-    color: rgb(64, 64, 100);
+    color: #70757a;
+    margin: 13px;
+}
+div.bottom-left{
+    margin-left: 22px;
+    margin-bottom: 1px;
+    margin-right: auto;
+}
+a.bottom-middle{
+    color: #70757a;
+}
+#bottom-middle{
+    margin-bottom: 1px;
+    margin-left: -100px;
+}
+#bottom-right{
+    margin-left: auto;
+    margin-bottom: 1px;
+    margin-right: 22px;
+}
+a.bottom-right{
+    color: #70757a;
+    margin: 13px;
 }
